# nojohns

./: .env.agent.example  .gitignore  .railwayignore  CLAUDE.md  CODEOWNERS  Dockerfile  Dockerfile.agent  README.md  TEST_PLAN.md  docker-compose.agent.yml  pyproject.toml  run_single_netplay_match.py  test_netplay_stability.py  test_phillip_vs_random.py
.claude/: settings.json
.claude/hooks/: check-handoffs.sh  scan-gh-secrets.sh
.github/workflows/: ci.yml
.loop/: config.sh
.loop/briefs/: 001-bracket-system.md  002-character-hardening-MANUAL.md  003-disconnect-recovery.md  004-prediction-markets.md  005-preseeded-markets-SKIP.md  006-human-vs-agent.md  007-event-promo-SKIP.md  007-event-promo.md  008-hardening.md
.loop/state/: progress.json  running.json
agents/: __init__.py  bankroll.py  continuous_spectator.py  moltbook.py  scouting.py  spectator.py  strategy.py
arena/: __init__.py  db.py  server.py
contracts/: .gitignore  CLAUDE.md  deployments.json  foundry.toml
contracts/script/: Deploy.s.sol  DeployPrediction.s.sol
contracts/src/: MatchProof.sol  PredictionPool.sol  Wager.sol
contracts/test/: MatchProof.t.sol  PredictionPool.t.sol  Wager.t.sol
docs/: API.md  ARCHITECTURE.md  ARENA.md  AUTO-OPPONENT.md  BUILD-PIPELINE.md  COMMANDS.md  DEPLOY.md  ERC8004-ARENA.md  FIGHTERS.md  GOTCHAS.md  HANDOFF-SCAV.md  HANDOFF-SCAVIEFAE.md  HEADLESS.md  HISTORY.md  NETPLAY.md  ONBOARDING.md  RESEARCH.md  SETUP-DOCKER.md  SETUP-LINUX.md  SETUP-WINDOWS.md  SETUP.md  SPEC.md  SWARM.md  TRAINING.md  TROUBLESHOOTING.md
docs/phillip-research/: .gitignore  MODEL_ANALYSIS.md  README.md  STATUS.md  phillip_adapter_poc.py
fighters/phillip/: README.md  __init__.py  fighter.toml  phillip_fighter.py  requirements.txt
fighters/smashbot/: __init__.py  adapter.py  fighter.toml
games/melee/: __init__.py  menu_navigation.py  netplay.py  runner.py
nojohns/: __init__.py  cli.py  config.py  contract.py  fighter.py  menu_navigation.py  netplay.py  registry.py  reputation.py  runner.py  wallet.py
phillip-research/: .gitignore  SETUP.md  STATUS.md  claude.md  test_phillip_model.py
scripts/: auto-opponent.sh  fleet_status.py  fund_wallets.py  generate_wallets.py  overnight_local_stress.py  pre-commit  release-to-main.sh  run_netplay.py  run_netplay_stability.py  run_phillip_vs_random.py  run_phillip_vs_smashbot.py  swarm.py  test_phillip_model.py
skill/: SKILL.md
skill/references/: wager-strategy.md
skill/scripts/: bankroll.sh  matchmake.sh  scout.sh
tests/: conftest.py  test_arena.py  test_bankroll.py  test_config.py  test_integration_signing.py  test_netplay.py  test_registry.py  test_smashbot_adapter.py  test_strategy.py  test_wallet.py
tournaments/: LOCAL_FALLBACK.md  PROGRAM.md  RUNBOOK.md  SPEC.md  VERTICAL_SLICE_TEST.md  __init__.py  admin.html  bracket.py  models.py  tournament.py  viewer.html
web/: CLAUDE.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
web/.vercel/: project.json
web/scripts/: generate-snapshot.mjs
web/src/: App.tsx  config.ts  index.css  main.tsx  viem.ts
worldmodel/: CLAUDE.md  RUNBOOK.md  __init__.py  batch_eval_report.html  viewer.html
worldmodel/configs/: fox_ditto_fd.yaml
worldmodel/data/: __init__.py  dataset.py  parse.py  policy_dataset.py
worldmodel/docs/: ACTION-PREDICTION-DIRECTIONS.md  BATCH-EVAL-ANALYSIS.md  EXPERIMENT-WORKFLOW.md  GLOSSARY.md  HANDOFF-MODAL.md  HOME-RUN-TRAINING.md  INPUT-CONDITIONING.md  MODAL-ENCODE-GUIDE.md  MODAL-REVIEW-RUNBOOK.md  OVERNIGHT-PLAN.md  PLAN-PARSER-V3.md  ROADMAP.md  gpu-rent-model-scratch.md
worldmodel/experiments/: baseline-v22.yaml  e008a-tap-focal-d3.yaml  e008b-positional-d3.yaml  e008c-multi-position.yaml  e008d-bidirectional-d3.yaml  e010a-ctrl-residual.yaml  e010b-transition-weight.yaml  e010c-ctrl-thresholds.yaml  exp-1a-state-age-embed.yaml  exp-1a2a-combined.yaml  exp-2a-press-events.yaml  exp-3a-1a-lookahead.yaml  exp-3a-1a2a-lookahead.yaml  exp-3a-lookahead-1.yaml  mamba2-1a-k60.yaml  mamba2-1a.yaml  mamba2-large-gpu.yaml  mamba2-medium-gpu-k60.yaml  mamba2-medium-gpu.yaml  mamba2-v3-100k-ranked.yaml  mamba2-v3-2k-test.yaml  projectile-2k-test.yaml
worldmodel/model/: __init__.py  base.py  encoding.py  mamba2.py  mlp.py  policy_mlp.py
(+125 files in other folders)
