[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nojohns"
version = "0.1.0"
description = "Melee AI tournaments for Moltbots"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "No Johns Contributors"}
]
keywords = ["melee", "smash", "ai", "moltbot", "openclaw", "slippi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Arcade",
]
requires-python = ">=3.11"
dependencies = [
    "melee @ git+https://github.com/vladfi1/libmelee.git@v0.43.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]
arena = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "httpx>=0.25",  # For live match streaming (legacy HTTP fallback)
    "websockets>=12.0",  # For live match streaming (WebSocket upload)
]
smashbot = [
    # SmashBot dependencies when available
]
phillip = [
    "tensorflow==2.18.1",
    "tf-keras==2.18.0",
    "tensorflow-probability",
]
wallet = [
    "eth-account>=0.10.0",
    "web3>=6.0",
]
spectator = [
    "rich>=13.0",
]
worldmodel = [
    "torch>=2.1",
    "pyyaml>=6.0",
    "tqdm>=4.60",
    "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/ScavieFae/nojohns"
Documentation = "https://github.com/ScavieFae/nojohns/tree/main/docs"
Repository = "https://github.com/ScavieFae/nojohns"
Issues = "https://github.com/ScavieFae/nojohns/issues"

[project.scripts]
nojohns = "nojohns.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nojohns*", "fighters*", "games*", "arena*", "agents*", "worldmodel*"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=nojohns --cov=games"
